Left to do:
Functions:

JUnit:
- Write Test for View Account Information.

Cucumber:
- Write Test for View Account Information.

Overall:
Error handling.